--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Audrey-b-or-Children-of-light_73229
 _version: 0.1.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Walton, O. F., Mrs.
@@ -15,6 +18,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/2468
     wikipedia: https://en.wikipedia.org/wiki/Amy_Catherine_Walton
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/73229#Audrey-b-or-Children-of-light
 gutenberg_issued: '2024-03-22'
 gutenberg_type: Text
 identifiers:
